Modify the Timeline, Top-nav, and Authentication

--- a/src/app/ui/top-nav/top-nav.component.html
+++ b/src/app/ui/top-nav/top-nav.component.html
@@ -20,13 +20,13 @@
       Login
     </a>
     <a class="nav-item" routerLink="/notes">
-      Firestore
+      Timeline
     </a>
-    <a class="nav-item" routerLink="/items">
+   <!-- <a class="nav-item" routerLink="/items">
       Realtime DB
-    </a>
+    </a> -->
     <a class="nav-item" routerLink="/uploads">
-      File Uploads
+      Profile
     </a>
   </div>
 </nav>
