--- a/src/app/notes/notes-list/notes-list.component.html
+++ b/src/app/notes/notes-list/notes-list.component.html
@@ -1,11 +1,41 @@
-<h1>Firestore Notes</h1>
+
+
+
+<!--Carousel --> 
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner" role="listbox" >
+    <div class="carousel-item active">
+      <img class="d-block img-fluid" src="assets/images/1.jpg" alt="First slide" style="width:860px; height:430px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="assets/images/3.jpg" alt="Second slide" style="width:860px; height:430px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="assets/images/2.png" alt="Third slide" style="width:860px; height:430px;">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+  <!-- /Carousel -->
+
+
+
+
+<h1>Timeline</h1>
 <p>This is a very basic demo of the Firestore database.</p>
 
-<input [(ngModel)]="content" placeholder="Add your own note" class="input">
+<input [(ngModel)]="content" placeholder="What's on your mind?" class="input"  style = "width: 670px;">
 
 
 <button class="button is-success" (click)="createNote()" [disabled]="content?.length < 2 || content?.length > 200">
-  Add Note
+  POST
 </button>
 <hr>
 <div *ngFor="let note of notes | async">
