Add the Update Button

--- a/src/app/uploads/upload-form/upload-form.component.html
+++ b/src/app/uploads/upload-form/upload-form.component.html
@@ -5,7 +5,7 @@
 
 
 <div class="box">
-  <h3>Single File Upload</h3>
+  <h3>Upload Photo</h3>
 
   <label>
     <input type="file" class="button" (change)="detectFiles($event)">
@@ -17,7 +17,7 @@
   </button>
 
   <hr>
-
+<!--
   <h3>Multiple File Upload</h3>
 
   <label>
@@ -29,3 +29,4 @@
     Upload Multiple
   </button>
 </div>
+-->
