--- a/src/app/notes/note-detail/note-detail.component.html
+++ b/src/app/notes/note-detail/note-detail.component.html
@@ -3,6 +3,9 @@
   <span class="button is-small is-info" (click)='addHeartToNote(note.hearts)'>
     Heart <i class="fa fa-heart"></i>
   </span>
+  <span class="button is-small is-info" (click)='update'>
+    Update
+  </span>
   <span class="button is-small is-danger" (click)='deleteNote(note?.id)'>Delete</span>
   <p>This note has been hearted {{ note.hearts || 0 }} times.</p>
 </div>
